--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -344,7 +344,7 @@ body {
 .container {
   display: grid;
   grid-template-areas: "header header" "main nav" "footer footer";
-  grid-template-columns: 80% 20%;
+  grid-template-columns: 80% 18.7%;
   grid-template-rows: auto auto auto;
 }
 .header {
@@ -373,11 +373,11 @@ body {
   z-index: 2;
   width: 20%;
 }
-.nav nav ul {
+.nav ul {
   list-style-type: none;
   padding: 0;
 }
-.nav nav ul li {
+.nav ul li {
   margin-bottom: 10px;
 }
 .nav img {
@@ -487,7 +487,7 @@ button {
   width: 10vw;
   min-width: 130px;
 }
-.nav nav {
+.nav {
   display: flex;
   flex-direction: column;
 }
@@ -501,8 +501,8 @@ button {
   flex: 0;
   margin-top: auto;
 }
-.nav,
-.nav nav {
+.nav aside,
+.nav {
   height: 100% !important;
 }
 button:hover {
