--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -341,6 +341,9 @@ body {
   margin: 0;
   padding: 0;
 }
+ul {
+  list-style: none;
+}
 .container {
   display: grid;
   grid-template-areas: "header header" "main nav" "footer footer";
@@ -374,7 +377,7 @@ body {
   width: 20%;
 }
 .nav ul {
-  list-style-type: none;
+  list-style-office: none;
   padding: 0;
 }
 .nav ul li {
