--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,16 +1,24 @@
-nav {
+.nav {
     box-sizing: border-box;
     background-color: black;
     width: 100%;
-    padding: 10px 20px; /* Increased padding for better spacing */
+    padding: 10px 10px;
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    height: 70px; /* Increased height for better visibility */
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 100; /* Ensure it's above other content */
+    position: relative;
+    height: 50px;
+  }
+  
+  .navbar-icon {
+    width: 20px;
+    height: 20px;
+    margin-right: 5px;
+  }
+  
+  .login {
+    color: white;
+    margin-left: auto;
   }
   
   nav ul {
@@ -23,7 +31,7 @@ nav {
   }
   
   nav li {
-    margin-right: 20px; /* Increased margin between items */
+    margin-right: 10px;
   }
   
   nav li:last-child {
@@ -33,30 +41,59 @@ nav {
   nav a {
     color: white;
     text-decoration: none;
-    padding-bottom: 5px; /* Adjusted padding for better spacing */
     border-bottom: 2px solid transparent;
+    padding-right: 8px;
   }
   
   nav a:last-child {
-    border-bottom: none;
+    border-right: none;
   }
   
   nav a:hover,
   nav a.active {
     border-bottom-color: white;
   }
-  .nav {
-    box-sizing: border-box;
-    background-color: black;
-    width: 100%;
-    padding: 10px 20px;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    height: 70px;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 100;
+  
+  @media (max-width: 850px) {
+    .navbar-items {
+      display: none;
+      position: absolute;
+      top: 50px;
+      left: 0;
+      width: 100%;
+      background-color: black;
+      padding: 15px 10px;
+      flex-direction: column;
+    }
+  
+    .navbar-items.open {
+      display: flex;
+    }
+  
+    .navbar-items.open li {
+      text-align: center;
+      margin-bottom: 10px;
+      height: 75px;
+    }
+  
+    .navbar-items.open li a {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      height: 100%;
+      padding: 10px 0;
+    }
+  
+    .navbar-items li a:hover,
+    .navbar-items li a:focus {
+      background-color: white;
+      color: black;
+    }
+  
+    .navbar-items li a:hover .navbar-icon,
+    .navbar-items li a:focus .navbar-icon {
+      filter: invert(1);
+    }
   }
   
