--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,77 +1,3 @@
-#Navigationbar
-
-.nav {
-  display: block;
-  background-color: #375c5489;
-}
-
-.nav {
-  width: 100vw;
-}
-
-.nav-section,
-main {
-  display: flex;
-  justify-content: center;
-}
-
-.nav-section,
-main {
-  flex-direction: column;
-}
-
-nav ul {
-  list-style: none;
-  display: flex;
-}
-
-nav ul li {
-  margin-right: 10px; /* Adjust spacing between navigation items */
-}
-
-/* Update navigation link styles */
-nav a {
-  padding: 10px 16px; /* Adjusted padding for spacing */
-  border-radius: 1px;
-  transition: background-color 0.3s ease; /* Smooth background color transition */
-}
-
-/* Hover effect for navigation links */
-nav a:hover {
-  background-color: #0d100f; /* Teal background color on hover */
-  color: #fff; /* White text color on hover */
-}
-
-
-.container {
-  display: grid;
-  grid-template-areas: "main nav";
-  grid-template-columns: 90% 10%; /* Adjust column widths as needed */
-  grid-template-rows: auto; /* Only one row */
-}
-
-/* Update navigation bar styles */
-nav {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  background-color: #386b6b; /* Teal background color */
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 20px; /* Adjust padding for spacing */
-  z-index: 1000; /* Ensure it's above other content */
-}
-
-.nav-section button {
-  width: 10% ;
-}
-
-
-#Buttons
-
-
 .alert-box,
 .result-box,
 .scroll-to-new-results:hover .buttons-scroll-to-new-results {
@@ -91,7 +17,7 @@ header img {
   position: relative;
   top: 0;
   left: 0;
-  width: 100% ;
+  width: 100% !important;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -158,11 +84,6 @@ body.modal-open {
   position: relative;
 }
 
-.user-sign-in-state {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
 .user-details {
   margin: 1vw;
 }
@@ -226,7 +147,7 @@ room {
   background-size: cover;
   background-repeat: no-repeat;
 }
-.loading-bar-image,
+
 .room-header,
 header,
 main {
@@ -311,7 +232,27 @@ button {
   margin-top: 2vw;
   align-content: center;
 }
-
+.footer,
+.header {
+  position: relative;
+  z-index: 1;
+}
+button h3,
+button h4,
+header button h3,
+header button h4 {
+  margin: 0;
+  padding: 0;
+  line-height: normal;
+}
+h2,
+h3,
+h4,
+h5,
+p {
+  font-weight: 400;
+}
+room h4,
 header h1 {
   width: 100%;
 }
@@ -326,14 +267,23 @@ room h4 {
   margin: 10px 0;
 }
 
-
+.footer,
+.welcome-view,
+room,
+button {
+  background-color: #94a7a3;
+}
+room,
+button {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
 button,
 button P {
   margin: 0;
   outline: 0;
 }
 .part-two-header {
-  color: #fefeff;
+  color: #4a5351;
 }
 header {
   flex-direction: row;
@@ -343,6 +293,7 @@ header {
   position: relative;
   min-height: max(12vw, 100px);
 }
+
 header img {
   height: max(12vw, 100px);
   opacity: 0.5;
@@ -372,6 +323,27 @@ body {
   margin: 0;
   padding: 0;
 }
+ul {
+  list-style: none;
+}
+
+.header {
+  width: 100% !important;
+  justify-content: center;
+  align-items: center;
+  min-height: max(12vw, 100px);
+}
+.description,
+.footer {
+  display: flex;
+  justify-content: center;
+  width: 80%;
+}
+.footer {
+  grid-area: footer;
+  align-items: center;
+}
+
 .room-front-page,
 .welcome-categories,
 main .rooms {
@@ -388,7 +360,9 @@ main .rooms {
 .room-header .title {
   display: block;
 }
-
+nav {
+  padding: 0.5vw;
+}
 .room-front-page {
   margin-bottom: 30px;
   min-height: 200px;
@@ -403,7 +377,7 @@ h3 {
   font-size: max(0.82vw, 14px);
 }
 h4 {
-  font-size: max(0.7vw, 14px) ;
+  font-size: max(0.7vw, 14px) !important;
 }
 h5 {
   margin: 0;
@@ -431,7 +405,7 @@ p {
   width: 50vw;
 }
 .popup-menu,
-main button {
+button {
   justify-content: center;
   display: flex;
 }
@@ -456,6 +430,28 @@ button P {
 .room-header .author-nonFormattedDate span {
   margin-top: 2px;
 }
+
+button {
+  align-items: center;
+  margin: 1vw;
+  height: 30px !important;
+}
+button {
+  height: min-content !important;
+  border: 3px solid #fff;
+  padding: 0 !important;
+  background: #81a59c;
+}
+.description button {
+  width: 10vw;
+  min-width: 130px;
+}
+
+button:hover {
+  transform: scale(1.05);
+  cursor: pointer;
+  background-color: #61857e;
+}
 .main-welcome {
   display: flex;
   justify-content: center;
@@ -465,8 +461,8 @@ button P {
 }
 @media (min-width: 862px) {
   main .rooms {
-    padding-right: 15vw ;
-    padding-left: 15vw;
+    padding-right: 15vw !important;
+    padding-left: 15vw !important;
   }
 }
 @media (max-width: 863px) {
@@ -476,18 +472,23 @@ button P {
     grid-template-columns: repeat(2, 1fr);
   }
   .popup-menu {
-    width: 90% ;
+    width: 90% !important;
     max-width: none;
     padding: 10px;
   }
   .container {
-    grid-template-columns: 1fr;
     grid-template-areas: "header" "nav" "main" "footer";
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto 1fr auto;
   }
- 
+  .nav {
+    position: relative;
+    border: none;
+    height: auto;
+  }
   .description {
     flex-direction: column;
-    width: 100vw ;
+    width: 100vw !important;
   }
   .welcome-view {
     padding: 15px;
@@ -495,16 +496,18 @@ button P {
     border-radius: 10px;
     box-shadow: 0 4px 8px #000;
   }
-  .description,
-  .footer,
   .header,
+  .footer,
+  .nav {
+    width: 100vw;
+  }
   .header {
-    width: 100% ;
+    width: 100% !important;
   }
 }
 .popup-content-wrapper,
 .popup-menu {
-  height: 100% ;
+  height: 100% !important;
   z-index: 1000;
 }
 .copy-button {
@@ -525,7 +528,7 @@ button P {
 }
 .popup-menu,
 .sign-in-out-button button {
-  width: 100% ;
+  width: 100% !important;
 }
 .citation-style h3 {
   grid-area: 1/1/2/3;
@@ -610,14 +613,131 @@ button P {
   color: #333;
 }
 .meetingFacilitator li {
-  user-select: none; /* Standard HTML5 */
-  -webkit-user-select: none; /* Chrome/Safari */
-  -moz-user-select: none; /* Firefox */
-  -ms-user-select: none; /* IE10+ */
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
   padding: 5px;
   margin-top: 5px;
   background-color: #f8f9fa;
   border-radius: 5px;
   display: flex;
   align-items: center;
+}
+
+.container {
+  display: grid;
+  grid-template-areas: "header" "nav" "main" "footer";
+  grid-template-columns: 1fr;
+  grid-template-rows: auto auto 1fr auto;
+  height: 100vh;
+}
+
+.nav {
+  grid-area: nav;
+  border-bottom: 1px solid #ccc;
+  position: relative;
+  width: 100%;
+  z-index: 2;
+}
+main {
+  flex-direction: column;
+}
+
+.scroll-to-new-results {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 30px;
+  margin-top: 1vw;
+  margin-bottom: 1vw;
+}
+
+.nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #375c5489;
+  padding: 0.5rem 1rem;
+  color: white;
+}
+
+.nav-section {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.links-nav-section {
+  flex: 2;
+  justify-content: center;
+}
+
+.log-in-nav-section {
+  flex: 1;
+  justify-content: flex-end;
+}
+
+.search-nav-section {
+  display: none;
+  flex: 1;
+  width: 100%;
+  justify-content: center;
+  padding-top: 10px;
+}
+
+.search-nav-section {
+  display: block;
+}
+
+.search-input {
+  padding: 0.5rem;
+  border-radius: 4px;
+  border: none;
+  width: 100%;
+}
+
+h3,
+h4 {
+  margin: 0;
+}
+
+@media (max-width: 768px) {
+  .nav {
+    flex-direction: column;
+  }
+
+  .links-nav-section {
+    order: 3;
+  }
+
+  .log-in-nav-section,
+  .search-nav-section {
+    width: 100%;
+  }
+
+  .search-nav-section {
+    order: 1;
+  }
+
+  .log-in-nav-section {
+    order: 2;
+  }
+}
+.room:hover,
+.header,
+.nav {
+  display: block;
+  background-color: #375c5489;
+}
+.nav {
+  width: 100vw !important;
+}
+
+.search-input {
+  width: 10vw;
+}
+.nav button {
+  width: 150px;
+  height: 80px;
 }
