--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -283,7 +283,7 @@ button P {
   outline: 0;
 }
 .part-two-header {
-  color: #4a5351;
+  color: #f5f5f5;
 }
 header {
   flex-direction: row;
@@ -295,9 +295,11 @@ header {
 }
 
 header img {
-  height: max(12vw, 100px);
-  opacity: 0.5;
-  bottom: 0;
+  height: 80px; /* Set the desired height for the image */
+  opacity: 0.8;
+  position: absolute; /* Position the image absolutely */
+  right: 450px; /* Adjust the left position as needed */
+  top: 30px; /* Move the image 20px upwards (adjust as needed) */
 }
 html {
   color: #000;
