fixed bug with DateTime popup

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -504,6 +504,10 @@ main {
   min-height: max(4vw, 50px);
 }
 
+.react-datepicker{
+  width: 327px;
+}
+
 .links-nav-section {
   display: flex;
   justify-content: center;
