--- a/src/styles/welcome.css
+++ b/src/styles/welcome.css
@@ -1,35 +1,42 @@
 /* Style for the grid container */
 .custom-welcome-grid {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-  
-  /* Style for each grid item (feature container) */
-  .custom-welcome-item {
-    width: calc(30% - 20px); /* Each item takes up 30% of the container width with margin */
-    margin: 20px; /* Margin between grid items */
-    padding: 10px;
-    background-color: #f0f0f0fd; /* Light gray background color */
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Soft shadow effect */
-    height: 400px; /* Set the height of each item */
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-  
-  /* Style for heading inside each grid item */
-  .custom-welcome-view-heading {
-    font-size: 25px;
-    font-weight: bold; /* Make the heading bold */
-  }
-  
-  /* Style for paragraph inside each grid item */
-  .custom-welcome-view-paragraph {
-    font-size: 19px;
-    line-height: 1.6;
-    
-    
-  }
-  /* Style for the custom welcome container */
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+/* Style for each grid item (feature container) */
+.custom-welcome-item {
+  width: calc(
+    16%
+  ); /* Each item takes up 30% of the container width with margin */
+  margin: 20px; /* Margin between grid items */
+  padding: 10px;
+  background-color: #f0f0f0fd; /* Light gray background color */
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Soft shadow effect */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.custom-welcome-view-paragraph ol {
+  padding-left: 1vw !important;
+}
+
+.custom-welcome-view-paragraph ol li {
+  list-style-type: decimal !important;
+  padding-left: 0 !important;
+  text-align: left !important;
+}
+/* Style for heading inside each grid item */
+.custom-welcome-view-heading {
+  font-size: 25px;
+  font-weight: bold; /* Make the heading bold */
+}
+
+/* Style for paragraph inside each grid item */
+.custom-welcome-view-paragraph {
+  line-height: 1.6;
+}
+/* Style for the custom welcome container */
