--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -801,6 +801,11 @@ header img {
 }
 .meeting-description div {
   margin: 0.5vw;
+  border: 2px solid #81a59c !important;
+  background-color: #81a59c4b !important;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15) !important;
+  border-radius: 8px !important;
+  padding: 0.5vw !important;
 }
 button {
   padding: 0.1vw !important;
